--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的在线简历</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1803731_1ztdh1u7dg8.css">
 </head>
 
